# Scheme

./:  README.md  FileInterpreter.hs  Interpreter.hs  README.md  Scheme.cabal  UnitTest.hs  UnitTestMonadX.hs
MonadX/: MonadTrans.hs
Scheme/: Action.hs  DataType.hs  Evaluator.hs  LISP.hs  Parser.hs  Util.hs
Scheme/Action/: Command.hs  Env.hs  IO.hs
Scheme/DataType/: Error.hs  Misc.hs  Value.hs
Scheme/DataType/Error/: Eval.hs  Try.hs
Scheme/Evaluator/: Chaitin.hs  Eval.hs  IO.hs  Micro.hs  Prelude.hs
Start/Godel/TheLimitOfMathematics/: examples1.scm  examples2.scm  examples3.scm  examples4.scm  godel.scm  godel2.scm  godel3'.scm  godel3.scm  omega.scm  omega2.scm  omega3'.scm  omega3.scm  utm.scm
Start/Godel/TheUnknowable/: LISP式がエレガントであることを証明できないというチャイティンの証明.scm  不完全性定理についてのゲーデルの証明の一部.scm  停止問題の解決不可能性についてのチューリングの証明.scm  自分のコードを出力するプログラム.scm
Start/Godel/TheUnknowable/original/: A_self-reproducing_LISP_expression.scm  Gödel's_proof_of_his incompleteness_theorem.scm
Start/Godel/misc/: Schemeでラムダ計算.scm  SchemeとActor理論.scm  不動点オペレータについて.scm  自己出力プログラムと自己参照プログラム.scm
Start/Lib/: lib.scm  lib2.scm  set.scm
Start/UnitTest/: evaluation.scm  infinite_list.scm  lib.scm  macro.scm  macro2.scm  quasiquote.scm  recursion.scm  scope.scm  set.scm
Start/eval/: SICP-lazy.scm  SICP.scm  mmitou.scm
Util/: Bits.hs  FileSystem.hs
app/: FileInterpreter.hs  Interpreter.hs
src/: Config.hs
src/MonadX/Monad/: Reference.hs
src/Scheme/: DataType.hs  Evaluator.hs  LISP.hs  Parser.hs  Util.hs
src/Scheme/Action/: Command.hs  Env.hs  IO.hs
src/Scheme/DataType/: Error.hs  Value.hs
src/Scheme/DataType/Error/: Eval.hs  Try.hs
src/Scheme/Evaluator/: Chaitin.hs  Eval.hs  IO.hs  Prelude2.hs
src/Util/: Bits.hs  FileSystem.hs
test/: UnitTest.hs  doctests.hs
