name:                Scheme
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/Scheme#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config
                     , Scheme.Action
                     , Scheme.Action.Command
                     , Scheme.Action.Env
                     , Scheme.Action.IO
                     , Scheme.DataType
                     , Scheme.DataType.Error
                     , Scheme.DataType.Error.Eval
                     , Scheme.DataType.Error.Try
                     , Scheme.DataType.Misc
                     , Scheme.DataType.Value
                     , Scheme.Evaluator
                     , Scheme.Evaluator.Chaitin
                     , Scheme.Evaluator.Eval
                     , Scheme.Evaluator.IO
                     , Scheme.Evaluator.Micro
                     , Scheme.Evaluator.Prelude
                     , Scheme.Evaluator.Prelude2
                     , Scheme.LISP
                     , Scheme.Parser
                     , Scheme.Util
                     , MonadX.Monad.Error
                     , MonadX.Monad.Maybe
                     , MonadX.Monad.RWS
                     , MonadX.Monad.Reader
                     , MonadX.Monad.Reference
                     , MonadX.Monad.State
                     , MonadX.Monad.Writer
                     , MonadX.MonadTrans
                     , Util.Bits
                     , Util.FileSystem
                     , Util.LISP
  build-depends:       base >= 4.7 && < 5
                     , deepcontrol
                     , mtl
                     , containers
                     , parsec
                     , directory, filepath
                     , time
  default-language:    Haskell2010                 

executable SchemeFI-exe
  hs-source-dirs:      app
  main-is:             FileInterpreter.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , deepcontrol
                     , Scheme
                     , directory
                     , filepath
  default-language:    Haskell2010
executable SchemeI-exe
  hs-source-dirs:      app
  main-is:             Interpreter.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , deepcontrol
                     , Scheme
 default-language:    Haskell2010

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  HS-Source-Dirs:       test
  Ghc-Options:          -threaded -Wall
  Main-Is:              doctests.hs
  Build-Depends:        base
                      , doctest >= 0.9.3
                      , QuickCheck >= 2.8.1

Test-Suite UnitTest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  HS-Source-Dirs:       test
  -- Ghc-Options:          -threaded -Wall
  Main-Is:              UnitTest.hs
  Build-Depends:        base
                      , HUnit
                      , deepcontrol
                      , Scheme
                      , parsec

source-repository head
  type:     git
  location: https://github.com/ocean0yohsuke/Scheme
